--- a/css/main.css
+++ b/css/main.css
@@ -930,10 +930,10 @@ aside {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .blockTextWrapper .blockText {
@@ -1164,18 +1164,18 @@ aside {
   padding: 100px 0;
   background-image: url("/uploads/Contacts.jpg");
 }
+
 .mainPage {
   background-position: 50% 35%;
   background-size: cover;
   padding: 100px 0;
-  background-image: url("/CA/uploads/main-header.png");
+  background-image: url("/uploads/main-header.png");
   height: 400px !important;
 }
 
 .mainPage .h1 {
   margin-top: 170px;
 }
-
 
 .faqPage .h1 {
   margin-top: 170px;
@@ -1200,6 +1200,7 @@ aside {
   display: inline-block;
   width: auto;
 }
+
 .mainForm {
   width: 100%;
   text-align: center;
@@ -1207,23 +1208,23 @@ aside {
   margin: 0 auto;
 }
 
-.mainForm .h3 {
+#mainForm .h3 {
   margin-bottom: 25px;
 }
 
-.mainForm input {
+#mainForm input {
   max-width: 450px;
   margin: 0 auto 10px !important;
 }
 
-.mainForm input[name="email"] {
+#mainForm input[name="email"] {
   border-radius: 5px 5px 0 0;
   border-color: #E8E8E8;
   border-width: 1px;
   border-style: solid;
 }
 
-.mainForm input[name="email"]:focus {
+#mainForm input[name="email"]:focus {
   border-color: #FE6500;
   border-top-width: 2px;
   border-bottom-width: 2px;
