--- a/css/main.css
+++ b/css/main.css
@@ -1169,7 +1169,7 @@ aside {
   background-position: 50% 35%;
   background-size: cover;
   padding: 100px 0;
-  background-image: url("/uploads/main-header.png");
+  background-image: url("/CA/uploads/main-header.png");
   height: 400px !important;
 }
 
