--- a/templates/page/level1.html
+++ b/templates/page/level1.html
@@ -331,18 +331,16 @@
         <section>
             <div class="container">
                 <div class="rows">
+                    <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                </div>
+                <div class="rows">
                     <article>
                         <h3 class="h3">
                             Online Coding Classes for Kids – Level 2 and Level 3 Class Schedule
                         </h3>
                         <p>
                             If you have NOT taken a Level 1 class, please refer to our <a title="Online Coding Classes Calendar" href="https://www.codeadvantage.org/online-coding-classes-for-kids#onlineCalendar">Level 1 classes</a>  before signing up for an advanced level.
-                        </p>
-                            <h2 class="h2">Online Coding Camp/Class Schedules & Registration</h2>
-                            <p class="mb-middle">
-                                Already took Level 1? Check out  <a href="#">Level 2 and 3 classes</a>
-                            </p>
-                    
+                        </p>           
                             <!-- {% if oneWeek %} -->
                             <div id="SpringSchedule">                     
                                 <div class="accordeon" >
