--- a/templates/page/level1.html
+++ b/templates/page/level1.html
@@ -335,10 +335,10 @@
                 </div>
                 <div class="rows">
                     <article>
-                        <h3 class="h3">
+                        <h2 class="h2">
                             Online Coding Classes for Kids – Level 2 and Level 3 Class Schedule
-                        </h3>
-                        <p>
+                        </h2>
+                        <p class="mb-middle">
                             If you have NOT taken a Level 1 class, please refer to our <a title="Online Coding Classes Calendar" href="https://www.codeadvantage.org/online-coding-classes-for-kids#onlineCalendar">Level 1 classes</a>  before signing up for an advanced level.
                         </p>           
                             <!-- {% if oneWeek %} -->
