--- a/css/main.scss
+++ b/css/main.scss
@@ -930,10 +930,10 @@ aside {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .blockTextWrapper .blockText {
@@ -1158,12 +1158,25 @@ aside {
   margin-top: 170px;
 }
 
+.levels23Page {
+  background-position: 50% 35%;
+  background-size: cover;
+  padding: 100px 0;
+  background-image: url("/CA/uploads/levels2-3.jpg");
+  height: 400px !important;
+}
+
+.levels23Page .h1 {
+  margin-top: 170px;
+}
+
 .faqPage {
   background-position: 35% 35%;
   background-size: cover;
   padding: 100px 0;
   background-image: url("/uploads/Contacts.jpg");
 }
+
 .mainPage {
   background-position: 50% 35%;
   background-size: cover;
@@ -1175,7 +1188,6 @@ aside {
 .mainPage .h1 {
   margin-top: 170px;
 }
-
 
 .faqPage .h1 {
   margin-top: 170px;
@@ -1200,6 +1212,7 @@ aside {
   display: inline-block;
   width: auto;
 }
+
 .mainForm {
   width: 100%;
   text-align: center;
@@ -1207,31 +1220,29 @@ aside {
   margin: 0 auto;
 }
 
-#mainForm{
- .h3 {
-    margin-bottom: 25px;
-  }
-  
-  input {
-    max-width: 450px;
-    margin: 0 auto 10px!important;
-  }
-  
-   input[name="email"] {
-    border-radius: 5px 5px 0 0;
-    border-color: #E8E8E8;
-    border-width: 1px;
-    border-style: solid;
-  }
-  
-   input[name="email"]:focus {
-    border-color: #FE6500;
-    border-top-width: 2px;
-    border-bottom-width: 2px;
-    border-top-color: transparent;
-    border-right-color: transparent;
-    border-left-color: transparent;
-    border-style: solid;
-  }
+#mainForm .h3 {
+  margin-bottom: 25px;
+}
+
+#mainForm input {
+  max-width: 450px;
+  margin: 0 auto 10px !important;
+}
+
+#mainForm input[name="email"] {
+  border-radius: 5px 5px 0 0;
+  border-color: #E8E8E8;
+  border-width: 1px;
+  border-style: solid;
+}
+
+#mainForm input[name="email"]:focus {
+  border-color: #FE6500;
+  border-top-width: 2px;
+  border-bottom-width: 2px;
+  border-top-color: transparent;
+  border-right-color: transparent;
+  border-left-color: transparent;
+  border-style: solid;
 }
 /*# sourceMappingURL=main.css.map */
