--- a/css/main.css
+++ b/css/main.css
@@ -1158,6 +1158,18 @@ aside {
   margin-top: 170px;
 }
 
+.levels23Page {
+  background-position: 50% 35%;
+  background-size: cover;
+  padding: 100px 0;
+  background-image: url("/CA/uploads/levels2-3.jpg");
+  height: 400px !important;
+}
+
+.levels23Page .h1 {
+  margin-top: 170px;
+}
+
 .faqPage {
   background-position: 35% 35%;
   background-size: cover;
@@ -1169,7 +1181,7 @@ aside {
   background-position: 50% 35%;
   background-size: cover;
   padding: 100px 0;
-  background-image: url("/CA/uploads/main-header.png");
+  background-image: url("/uploads/main-header.png");
   height: 400px !important;
 }
 
