--- a/templates/page/level1.html
+++ b/templates/page/level1.html
@@ -292,7 +292,7 @@
                 <div class="rows">
                     <article>
                         <h1 class="h1">
-                            Level 2 and Level 3 Online Classes
+                            Level 2 and Level 3 <br> Online Classes
                         </h1>
                     </article>
                 </div>
