--- a/css/main.css
+++ b/css/main.css
@@ -1167,7 +1167,8 @@ aside {
 }
 
 .levels23Page .h1 {
-  margin-top: 170px;
+  margin-top: 45px;
+  background-color: transparent;
 }
 
 .faqPage {
