--- a/css/main.scss
+++ b/css/main.scss
@@ -1164,10 +1164,12 @@ aside {
   padding: 100px 0;
   background-image: url("/CA/uploads/levels2-3.jpg");
   height: 400px !important;
+  
 }
 
 .levels23Page .h1 {
-  margin-top: 170px;
+  margin-top: 45px;
+  background-color: transparent;
 }
 
 .faqPage {
