--- a/templates/page/level1.html
+++ b/templates/page/level1.html
@@ -287,7 +287,7 @@
 </div>
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
-        <section  class="sectionheader levels23Page">
+        <section  id="onlinePageHeader" class="sectionheader levels23Page">
             <div class="container">
                 <div class="rows">
                     <article>
