--- a/templates/page/level1.html
+++ b/templates/page/level1.html
@@ -316,7 +316,7 @@
                             
                         </h2>    
                         <p> 
-                            If you already took a CodeAdvantage <a title="Online Coding Classes" href="https://www.codeadvantage.org/online-coding-classes-for-kids">online coding class</a>, check here for <a href="#">Level 2</a> and <a href="#">Level 3</a> classes
+                            If you already took a CodeAdvantage <a title="Online Coding Classes" href="https://www.codeadvantage.org/online-coding-classes-for-kids">online coding class</a>, check here for <a href="#calendar">Level 2</a> and <a href="#calendar">Level 3</a> classes
                         </p>
                         <p>
                             One of the great things about our online coding program is that kids get the chance to go deeper and explore even more of the wonderful world of coding! If your child has completed Level 1 or Level 2 with us, they can continue on to the next level whenever they are ready. Each level builds on the child’s competencies, helps them apply coding fundamentals, reinforces practical application, and provides another opportunity to have fun…while learning to code!
@@ -328,7 +328,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="calendar">
             <div class="container">
                 <div class="rows">
                     <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
