--- a/templates/page/level13.html
+++ b/templates/page/level13.html
@@ -341,12 +341,9 @@
                 </div>
                 <div class="rows">
                     <article>
-                        <h2 class="h2">
+                        <h2 class="h2 mb-middle">
                             Online Coding Classes for Kids – Mastery Pack Schedule
-                        </h2>
-                        <p class="mb-middle">
-                            If you have NOT taken a Level 1 class, please refer to our <a title="Online Coding Classes Calendar" href="https://www.codeadvantage.org/online-coding-classes-for-kids#onlineCalendar">Level 1 classes</a>  before signing up for an advanced level.
-                        </p>           
+                        </h2>         
                             <!-- {% if oneWeek %} -->
                             <div id="SpringSchedule">                     
                                 <div class="accordeon" >
