--- a/css/main.scss
+++ b/css/main.scss
@@ -1176,7 +1176,7 @@ aside {
   background-position: 50% 35%;
   background-size: cover;
   padding: 100px 0;
-  background-image: url("/CA/uploads/levels2-3.jpg");
+  background-image: url("/CA/uploads/levels1-3.png");
   height: 400px !important;
   
 }
