--- a/templates/page/packs.html
+++ b/templates/page/packs.html
@@ -287,12 +287,12 @@
 </div>
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
-        <section  id="onlinePageHeader" class="sectionheader levels13Page">
+        <section  id="onlinePageHeader" class="sectionheader  varietyPacksPage">
             <div class="container">
                 <div class="rows">
                     <article>
                         <h1 class="h1">
-                            Mastery Packs
+                            Variety Packs
                         </h1>
                     </article>
                 </div>
@@ -311,23 +311,23 @@
                     <article>
                         <h2 class="textCenter h2 mb-middle">
                             <strong>
-                                Online Coding Classes – Level 2 and Level 3
+                                Online Coding Classes – Explore the Variety
                             </strong>
                             
                         </h2>    
                         <p>
-                            If your child is ready to master a new programming skill, signing up for a Mastery Pack is great way to get them starting on their coding adventure! 
+                            If your child is ready to start their coding adventure but you aren’t sure where to begin -
+                            signing up for a Variety Pack is great way to introduce them to fun coding options available for their grade level.                          
                         </p>
                         <p>
-                            We have bundled the three levels of a particular programming language so it can be 
-                            purchased at once with a <strong>for a $120 savings! </strong> 
-                            Our Mastery Packs allow you to sign up for the class and let your child continue through 
-                            each level without checking schedules, availability, or signing up again. The convenience and cost 
-                            savings is a big hit with families looking for a focused coding program so their child to learn, create, 
-                            and master a programming skill.
+                            We have bundled the three different coding 
+                            and/or game design classes by grade level. These can be purchased at one time <strong>for a $120 savings! </strong> 
                         </p>
                         <p>
-                            Whether your child wants to design their own video game, create web pages, develop animations, or learn about real-world programming languages, we have a Level 1-3 Mastery Pack for them! 
+                            Our Variety Packs allow you to sign up for the class and let your child continue through each class without having to re-check schedules or availability. Curated from our 35+ online coding classes, these Variety Packs give your child a great sampling of our classes. The convenience and cost savings is a big hit with families looking for a an opportunity to try out different programming languages so their child can explore and create in many different ways! 
+                        </p>
+                        <p>
+                            Whether your child wants to design their own video game, create web pages, develop animations, or learn about real-world programming languages, we have a Variety Pack for them! 
                         </p>
 
                     </article>
@@ -342,7 +342,7 @@
                 <div class="rows">
                     <article>
                         <h2 class="h2 mb-middle">
-                            Online Coding Classes for Kids – Mastery Pack Schedule
+                            Online Coding Classes for Kids – Variety Pack Schedule
                         </h2>         
                             <!-- {% if oneWeek %} -->
                             <div id="SpringSchedule">                     
