--- a/css/main.scss
+++ b/css/main.scss
@@ -1204,7 +1204,7 @@ aside {
   background-position: 35% 35%;
   background-size: cover;
   padding: 100px 0;
-  background-image: url("/uploads/varietyPacksHeader.png");
+  background-image: url("/uploads/Contacts.jpg");
 }
 
 .mainPage {
