--- a/templates/page/level13.html
+++ b/templates/page/level13.html
@@ -348,7 +348,7 @@
                             <div id="SpringSchedule">                     
                                 <div class="accordeon" >
                                     <h4 class="h4">
-                                        Daily (M-F): 1 hour each day (2 weeks) —
+                                        Daily (M-F): 1 hour each day (6 weeks)  —
                 
                                         <!-- {% set minOneWeek = 99999999999 %}
                                         {% for item in oneWeek %}
@@ -656,7 +656,7 @@
                             <div id="CampsSchedule">
                                 <div class="accordeon">
                                     <h4 class="h4">
-                                        Daily (M-F): 2 hours each day (1 week) — 
+                                        Daily (M-F): 2 hours each day (3 weeks)  — 
     
                                         <!-- {% set minTwoWeek = 99999999999 %}
                                         {% for item in twoWeek %}
@@ -964,7 +964,8 @@
                             <!-- {% if sections %} -->
                             <div>
                                 <div class="accordeon">
-                                    <h4 class="h4">Weekly: 1 hour once a week (8 weeks) —  
+                                    <h4 class="h4">
+                                        Weekly: 1 hour once a week (24 weeks)  —  
     
                                     <!-- {% set minSections = 99999999999 %}
                                     {% for item in sections %}
