--- a/templates/page/levels23.html
+++ b/templates/page/levels23.html
@@ -316,13 +316,20 @@
                             
                         </h2>    
                         <p> 
-                            If you already took a CodeAdvantage <a title="Online Coding Classes" href="https://www.codeadvantage.org/online-coding-classes-for-kids">online coding class</a>, check here for <a href="#calendar">Level 2</a> and <a href="#calendar">Level 3</a> classes
+                            If you already took a CodeAdvantage <a title="Online Coding Classes" 
+                            href="https://www.codeadvantage.org/online-coding-classes-for-kids">online coding class</a>, 
+                            check here for <a href="#calendar">Level 2</a> and <a href="#calendar">Level 3</a> classes
                         </p>
                         <p>
-                            One of the great things about our online coding program is that kids get the chance to go deeper and explore even more of the wonderful world of coding! If your child has completed Level 1 or Level 2 with us, they can continue on to the next level whenever they are ready. Each level builds on the child’s competencies, helps them apply coding fundamentals, reinforces practical application, and provides another opportunity to have fun…while learning to code!
+                            One of the great things about our online coding program is 
+                            that kids get the chance to go deeper and explore even more of the wonderful world of coding! 
+                            If your child has completed Level 1 or Level 2 with us, they can continue on to the next level whenever 
+                            they are ready. Each level builds on the child’s competencies, helps them apply coding fundamentals, 
+                            reinforces practical application, and provides another opportunity to have fun…while learning to code!
                         </p>
                         <p>
-                            Whether your child wants to design their own video game, create web pages, develop animations, or learn about real-world programming languages, we have a class for them! 
+                            Whether your child wants to design their own video game, create web pages, develop animations, or learn 
+                            about real-world programming languages, we have a class for them! 
                         </p>
                     </article>
                 </div>
