--- a/templates/page/packs.html
+++ b/templates/page/packs.html
@@ -321,7 +321,7 @@
                         </p>
                         <p>
                             We have bundled the three different coding 
-                            and/or game design classes by grade level. These can be purchased at one time <strong>for a $120 savings! </strong> 
+                            and/or game design classes by grade level. <strong>Purchase a 3 class Variety pack and save $120!</strong> 
                         </p>
                         <p>
                             Our Variety Packs allow you to sign up for the class and let your child continue through each class without having to re-check schedules or availability. Curated from our 35+ online coding classes, these Variety Packs give your child a great sampling of our classes. The convenience and cost savings is a big hit with families looking for a an opportunity to try out different programming languages so their child can explore and create in many different ways! 
