--- a/templates/page/level13.html
+++ b/templates/page/level13.html
@@ -311,7 +311,7 @@
                     <article>
                         <h2 class="textCenter h2 mb-middle">
                             <strong>
-                                Online Coding Classes – Level 2 and Level 3
+                                Learn, Create, Master a New Skill
                             </strong>
                             
                         </h2>    
