--- a/templates/page/level13.html
+++ b/templates/page/level13.html
@@ -319,8 +319,7 @@
                             If your child is ready to master a new programming skill, signing up for a Mastery Pack is great way to get them starting on their coding adventure! 
                         </p>
                         <p>
-                            We have bundled the three levels of a particular programming language so it can be 
-                            purchased at once with a <strong>for a $120 savings! </strong> 
+                            We have bundled the three levels of a particular programming language so it can be purchased all together for a <strong>$120 savings! </strong> 
                             Our Mastery Packs allow you to sign up for the class and let your child continue through 
                             each level without checking schedules, availability, or signing up again. The convenience and cost 
                             savings is a big hit with families looking for a focused coding program so their child to learn, create, 
