--- a/templates/page/levels23.html
+++ b/templates/page/levels23.html
@@ -350,7 +350,7 @@
                         </p>           
                             <!-- {% if oneWeek %} -->
                             <div id="SpringSchedule">                     
-                                <div class="accordeon" >
+                                <div>
                                     <h4 class="h4">
                                         Daily (M-F): 1 hour each day (2 weeks) —
                 
